# protein-embedding-workbench

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SPEC.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile.hf  README.hf.md  pyproject.toml  render.yaml  requirements-ml.txt  requirements.txt
backend/app/: main.py
backend/app/api/: routes_cache.py  routes_compare.py  routes_embeddings.py  routes_proteins.py  routes_search.py
backend/app/core/: config.py
backend/app/schemas/: embedding.py  protein.py
backend/app/services/: comparison_service.py  embedding_cache.py  embedding_service.py  faiss_search.py  input_resolver.py  sequence_validation.py  uniprot_client.py
backend/scripts/: seed_esm_cache.py
backend/tests/: test_sequence_validation.py
docs/: DEPLOYMENT.md
frontend/: README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
worker/: README.md
