[project]
name = "protein-embedding-workbench-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "numpy==2.2.1",
    "python-dotenv==1.0.1",
]

[project.scripts]
app = "app.main:app"
